samples/_failures_safe/1761728221_1d0924_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7acdd2fb.c: In function ‘topologicalSortUtil’:
./samples/SAFE/__tmp_7acdd2fb.c:138:9: error: expected expression at end of input
  138 |         if (graph->adjMatrix[vertex][i] && !visited[i])
      |         ^~
./samples/SAFE/__tmp_7acdd2fb.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7acdd2fb.c:138:9: error: expected declaration or statement at end of input
